objects/MaintenanceOrderDocument__c.object
<CustomObject>
    <fields>
        <fullName>AcceptanceDeadline__c</fullName>
        <label>検収締日</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountingApprovalDate__c</fullName>
        <label>経理承認日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AccountingValidation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>経理確認</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BudgetFiscalYear__c</fullName>
        <defaultValue>00</defaultValue>
        <label>予算年度</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BypassTriggerCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BypassTriggerCheck</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CashPromissoryDivision__c</fullName>
        <label>現金手形区分</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ContractDate__c</fullName>
        <label>契約年月日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContractFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>契約書</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Factoring__c</fullName>
        <label>ファクタリング有無</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>InspectionDeadlineDivision__c</fullName>
        <label>検収締切区分</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>InstallationDay__c</fullName>
        <defaultValue>0</defaultValue>
        <label>据置日</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaintenanceContractManagement__c</fullName>
        <label>保守契約管理</label>
        <referenceTo>MaintenanceContractManagement__c</referenceTo>
        <relationshipName>MaintenanceOrderDocument_MCM</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>OnSpotInspection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>立会検査</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>注文番号</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentDatePeriod__c</fullName>
        <label>支払日定時</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentDayDivision__c</fullName>
        <label>支払日区分</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PaymentFrequency__c</fullName>
        <defaultValue>0</defaultValue>
        <label>支払回数</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PaymentTerms__c</fullName>
        <label>支払条件</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PaymentTogetherDivision__c</fullName>
        <label>支払一括区分</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PenaltyFlg__c</fullName>
        <label>ペナルティ有無</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PenaltyRatio__c</fullName>
        <label>ペナルティ率</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>金額</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SerialNumber__c</fullName>
        <label>連番</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SightDays__c</fullName>
        <defaultValue>0</defaultValue>
        <label>サイト/DAYS</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UniqueKey2__c</fullName>
        <externalId>true</externalId>
        <label>UniqueKey2</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>UniqueKey__c</fullName>
        <externalId>true</externalId>
        <label>UniqueKey</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>注文書（保守契約管理）</label>
    <nameField>
        <displayFormat>MOD-{00000000}</displayFormat>
        <label>注文書番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>